# pairsnp-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
