[package]
name = "pairsnp-rs"
authors = ["Abhirath Anand <theabhirathanand@gmail.com>"]
description = "Calculate pairwise SNP distances given a multiple sequence alignment."
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/theabhirath/pairsnp-rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
rayon = "1.10.0"
roaring = "0.10.12"
needletail = "0.6.3"
